--- a/docker/local-database-compose.yml
+++ b/docker/local-database-compose.yml
@@ -1,15 +1,38 @@
 services:
-    db:
-        image: postgres:15-bookworm
-        container_name: postgres_db
+    mysql:
+        image: mysql:8.0
+        container_name: poetry-database
+        restart: always
         environment:
-            POSTGRES_USER: root
-            POSTGRES_PASSWORD: password
-            POSTGRES_DB: poetry
+            MYSQL_ROOT_PASSWORD: rootpassword
+            MYSQL_DATABASE: poetry_db
+            MYSQL_USER: user
+            MYSQL_PASSWORD: password
         ports:
-            - '5432:5432'
+            - '3306:3306'
         volumes:
-            - zinary_poetry_local_db_data:/var/lib/postgresql/data
+            - zinary_poetry_local_db_data:/var/lib/mysql
+        networks:
+            - mysql_network
+        command: --default-authentication-plugin=mysql_native_password
+
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        container_name: phpmyadmin-poetry-database
+        restart: always
+        environment:
+            PMA_HOST: mysql
+            PMA_USER: root
+            PMA_PASSWORD: rootpassword
+        ports:
+            - '8080:80'
+        depends_on:
+            - mysql
+        networks:
+            - mysql_network
 
 volumes:
     zinary_poetry_local_db_data:
+
+networks:
+    mysql_network:
