--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ graphene==3.4.3
 graphene-django==3.2.2
 graphql-core==3.2.5
 graphql-relay==3.2.0
+mysqlclient==2.2.6
 promise==2.3
-psycopg==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 six==1.16.0
